fix: enable cors for vercel frontend